# qr-code-studio

./: README.md  pyproject.toml
qr_code_studio/: decode.py  generate.py  main.py  save.py  test_storage.py
tests/: test_qr_code_studio.py
